--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,1 +1,15 @@
 <p>error-page works!</p>
+
+<a routerLink="/auth/login"> Ir al login </a>
+
+<a routerLink="/auth/register"> Ir al registro </a>
+
+<a routerLink="/inicio/add"> Ir al add </a>
+
+<a routerLink="/inicio/search"> Ir al search </a>
+
+<a routerLink="/inicio/update/1"> Ir al update </a>
+
+<a routerLink="/inicio/1"> Ir al details </a>
+
+<a routerLink="/inicio/list"> Ir al list </a>
